<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.applikeysolutions.cosmocalendar.view.CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/ll_settings"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rg_orientation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkedButton="@+id/rb_vertical">

            <RadioButton
                android:id="@+id/rb_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horizontal" />

            <RadioButton
                android:id="@+id/rb_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vertical" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_selection_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkedButton="@+id/rb_single">

            <RadioButton
                android:id="@+id/rb_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single" />

            <RadioButton
                android:id="@+id/rb_multiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiple" />

            <RadioButton
                android:id="@+id/rb_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range" />

            <RadioButton
                android:id="@+id/rb_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/to_ding_ding"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/to_dingding"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/new_blue"/>

</RelativeLayout>