<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/b7">

    <TextView
        android:gravity="center"
        android:text="@string/middle_one"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/b6"/>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_effect_one"
            android:gravity="center"
            android:text="@string/middle_one_one"
            android:textSize="14sp"
            android:textColor="@color/new_blue"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/b6"/>

        <TextView
            android:id="@+id/tv_effect_two"
            android:gravity="center"
            android:text="@string/middle_one_two"
            android:textSize="14sp"
            android:textColor="@color/new_blue"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/b6"/>

        <TextView
            android:id="@+id/tv_effect_three"
            android:gravity="center"
            android:text="@string/middle_one_three"
            android:textSize="14sp"
            android:textColor="@color/new_blue"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/b6"/>

        <TextView
            android:id="@+id/tv_effect_four"
            android:gravity="center"
            android:text="@string/middle_one_four"
            android:textSize="14sp"
            android:textColor="@color/new_blue"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/b6"/>

    </LinearLayout>

    <LinearLayout
        android:padding="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_to_run"
            android:gravity="center"
            android:text="@string/middle_to_run"
            android:textSize="14sp"
            android:textColor="@color/new_blue"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/b6"/>

    </LinearLayout>

</LinearLayout>