<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/view_anim"
            android:gravity="center"
            android:text="@string/view_anim"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/drawable_anim"
            android:gravity="center"
            android:text="@string/drawable_anim"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/property_anim"
            android:gravity="center"
            android:text="@string/property_anim"
            android:layout_width="match_parent"
            android:layout_height="40dp" />


    </LinearLayout>

</LinearLayout>